syntax = "proto3";

package api.shop.service.v1;
import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "casso/api/shop/service/v1;v1";

service Shop {
    // body:"*" 表示：请求数据全部从请求体映射，可以指定需要映射的字段
    rpc Register (RegisterRequest) returns (RegisterReply){
        option (google.api.http) = {
            post: "/v1/register",
            body:"*"  
        };
    }

    rpc Login (LoginRequest) returns (LoginReply){
        option (google.api.http) = {
            post: "/v1/login",
            body:"*"
        };
    }

    rpc GetUser (GetUserRequest) returns (GetUserReply){
        option (google.api.http) = {
            get: "/v1/me"
        };
    }

    rpc Demo (DemoRequest) returns (DemoResponse){
        option (google.api.http) = {
            put: "/v1/me/{id}",
            body:"nick_name"
        };
    }
}

message RegisterRequest {
    // 用户手机号码 （在此注释生成的swagger.json倒入apifox可自动生成注释）
    string mobile = 1 [(validate.rules).string.len = 11]; 
    // 密码
    string pass = 2 [(validate.rules).string = {min_len: 6, max_len: 18}];
    // 昵称
    string nick_name = 3;
    // 年龄
    int64 age = 4;
}
message RegisterReply {
    int64 id = 1; 
    string mobile = 2;
    string nick_name = 3;
    int64 age = 4; 
}

message LoginRequest {
    string mobile = 1 [(validate.rules).string.len = 11];
    string pass = 2 [(validate.rules).string = {min_len: 6, max_len: 18}];
}
message LoginReply {
    string token = 1;
}

message GetUserRequest {
}
message GetUserReply {
    string Name = 1;
}

message DemoRequest {
    string id = 1; // 从URL上映射
    string nick_name = 2; // 从body映射
}
message DemoResponse {
    string id = 1;
    string nick_name = 2;
}
